korczak-xyz/src/styles/Navbar.css
.navbar {
    display: flex;
    justify-content: flex-end;
    gap: 2rem;
    margin: 2rem;
}

.navbar_burger {
    display: none;
}

.navbar_outer_wrapper {
    width: 100%;
    max-width: 72rem;
}

@media (max-width: 640px) {
    .navbar {
        display: none;
    }

    .navbar.navbar-open {
        display: flex;
        flex-direction: column;
        gap: 1rem;
        margin: 1rem 1.5rem;
        align-items: flex-end;
    }

    .navbar_burger {
        display: block;
        cursor: pointer;
        font-size: 2rem;
        margin: 1rem 1.5rem;
    }

    .navbar_burger_wrapper {
        width: 100%;
        display: flex;
        justify-content: flex-end;
    }

    .navbar_outer_wrapper {
        display: flex;
        flex-direction: column;
        border-bottom: 1px solid #ccc;
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        background-color: #fff;
    }
}

